--- a/Lab3_1/Lab3_1/MainWindow.xaml
+++ b/Lab3_1/Lab3_1/MainWindow.xaml
@@ -3,25 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="FilePathTester" Height="350" Width="525">
-    <Grid Margin="5" DataContext="{Binding ElementName=wnd, Path=FilePathManager}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.5*"></RowDefinition>
-            <RowDefinition Height="2*"></RowDefinition>
-            <RowDefinition Height="0.5*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <TextBox x:Name="tbPath" Grid.ColumnSpan="3" Margin="3" VerticalAlignment="Center" MinHeight="30" VerticalContentAlignment="Center" Text="{Binding CurrentPath, Mode=TwoWay}"></TextBox>
-        <Button x:Name="btnAdd" Grid.Column="3" VerticalAlignment="Center" MinHeight="30" Margin="3" Click="btnAdd_Click">Добавить</Button>
-        <ListBox Name="lstTruePath" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" ItemsSource="{Binding TruePathesList, Mode=TwoWay}"></ListBox>
-        <ListBox Name="lstFalsePath" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Margin="5" ItemsSource="{Binding FalsePatherList, Mode=TwoWay}"></ListBox>
-        <Button Name="btnRemoveTrue" Grid.Row="2" VerticalAlignment="Center" MinHeight="30" Margin="5" Click="btnRemoveTrue_Click">Удалить</Button>
-        <Button Name="btnMoveTrue" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" MinHeight="30" Margin="5" Click="btnMoveTrue_Click">Переместить</Button>
-        <Button Name="btnRemoveFalse" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" MinHeight="30" Margin="5" Click="btnRemoveFalse_Click">Удалить</Button>
-        <Button Name="btnBackFalse" Grid.Row="2" Grid.Column="3" VerticalAlignment="Center" MinHeight="30" Margin="5" Click="btnBackFalse_Click">Вернуть</Button>
+    <Grid>
+        
     </Grid>
 </Window>
